--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -12,9 +12,11 @@
         
         <table id="id_list_table">
             <tbody>
-                <tr>
-                    <td>1: {{ new_item_text }}</td>
-                </tr>
+                {% for item in items %}
+                    <tr>
+                        <td>{{ forloop.counter }}: {{ item.text }}</td>
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
     </body>
