--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,14 +1,4 @@
-<html>
-    <head>
-        <title>To-Do lists</title>
-    </head>
-    <body>
-        <h1>Start a new To-Do list</h1>
-        
-        <form method="post" action="/lists/new">
-            {% csrf_token %}
-            <input type="text" id="id_new_item" placeholder="Enter a to-do item" name="item_text">
-        </form>
-        
-    </body>
-</html>
+{% extends "base.html" %}
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
